Version 7.9.8

2002-06-19  Kjetil Jacobsen  <kjetilja>

	* Added CURLOPT_CAPATH.
	
 	* Disallow recursive callback invocations (by Markus Oberhumer).

2002-06-18  Kjetil Jacobsen  <kjetilja>

	* Made some changes to setup.py which should fix the build
	problems on RedHat 7.3 (suggested by Benji <benji@kioza.net>).
	
	* Use CURLOPT_READDATA instead of CURLOPT_INFILE, and
	CURLOPT_WRITEDATA instead of CURLOPT_FILE.  Also fixed some
	reference counting bugs with file objects.
	
	* CURLOPT_FILETIME and CURLINFO_FILETIME had a namespace clash
	which caused them not to work.  Use OPT_FILETIME for setopt() and
	INFO_FILETIME for getinfo().  See example usage in
	'test_getinfo.py' for details.

Version 7.9.7
	
2002-05-20  Kjetil Jacobsen  <kjetilja>

	* New versioning scheme.  Pycurl now has the same version number
	as the libcurl version it was built with.  The pycurl version
	number thus indicates which version of libcurl is required to run.

Version 0.4.10 (Not released)

2002-05-17  Kjetil Jacobsen  <kjetilja>

	* Added CURLINFO_REDIRECT_TIME and CURLINFO_REDIRECT_COUNT.

2002-04-27  Kjetil Jacobsen  <kjetilja>

	* Fixed potential memory leak and thread race (by Markus
	Oberhumer)

Version 0.4.9

2002-04-15  Kjetil Jacobsen  <kjetilja>

	* Added CURLOPT_DEBUGFUNCTION to allow debug callbacks to be
	specified (see the file 'test_debug.py' for details on how to use
	debug callbacks).

	* Added CURLOPT_DNS_USE_GLOBAL_CACHE and
	CURLOPT_DNS_CACHE_TIMEOUT.

	* Fixed a segfault when finalizing curl objects in Python 1.5.2.

	* Now requires libcurl 7.9.6 or greater.

2002-04-12  Kjetil Jacobsen  <kjetilja>

	* Added 'test_post2.py' file which is another example on how to
	issue POST requests.

2002-04-11  Markus F.X.J. Oberhumer <mfx>

	* Added the 'test_post.py' file which demonstrates the use of
	POST requests.

Version 0.4.8

2002-03-07  Kjetil Jacobsen  <kjetilja>

	* Added CURLOPT_PREQUOTE.

	* Now requires libcurl 7.9.5 or greater.
